implement basic structure for swiper

--- a/my-app/src/app/styles/globals.css
+++ b/my-app/src/app/styles/globals.css
@@ -1,2 +1,5 @@
 @import './reset.css'; 
 @import "tailwindcss/preflight";
+@import 'swiper/css';
+@import 'swiper/css/navigation';
+@import 'swiper/css/pagination';
