--- a/my-app/src/app/styles/globals.css
+++ b/my-app/src/app/styles/globals.css
@@ -1,5 +1,6 @@
 @import './reset.css'; 
 @import "tailwindcss/preflight";
+@tailwind utilities;
 @import 'swiper/css';
 @import 'swiper/css/navigation';
 @import 'swiper/css/pagination';
