--- a/my-app/src/app/styles/globals.css
+++ b/my-app/src/app/styles/globals.css
@@ -1,4 +1,5 @@
 @import './reset.css'; 
+@import "tailwindcss";
 @import "tailwindcss/preflight";
 @tailwind utilities;
 @import 'swiper/css';
@@ -8,3 +9,4 @@
 body {
   font-family: var(--font-space-grotesk), sans-serif;
 }
+
