--- a/my-app/src/app/styles/globals.css
+++ b/my-app/src/app/styles/globals.css
@@ -1,12 +1,12 @@
-@import './reset.css'; 
-@import "tailwindcss";
-@import "tailwindcss/preflight";
-@tailwind utilities;
+@import './reset.css';
 @import 'swiper/css';
 @import 'swiper/css/navigation';
 @import 'swiper/css/pagination';
 
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 body {
   font-family: var(--font-space-grotesk), sans-serif;
 }
-
