--- a/my-app/src/app/styles/reset.css
+++ b/my-app/src/app/styles/reset.css
@@ -1,4 +1,4 @@
-/* * { padding: 0; margin: 0; border: 0; }
+* { padding: 0; margin: 0; border: 0; }
 *,
 *:before,
 *:after { -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box; }
@@ -17,4 +17,4 @@ a:hover { text-decoration: none; }
 ul, li { list-style: none; }
 img { vertical-align: top; }
 h1, h2, h3, h4, h5, h6 { font-size: inherit; font-weight: inherit; }
-cite { font-style: normal; } */
+cite { font-style: normal; }
